feat: add knowledge keywords functions
