# docs/v1/swagger.yaml
@@ -608,6 +608,21 @@ definitions:
     - assistantId
     - prompt
     type: object
+  request.CreateKeywordsReq:
+    properties:
+      alias:
+        type: string
+      knowledgeBaseIds:
+        items:
+          type: string
+        type: array
+      name:
+        type: string
+    required:
+    - alias
+    - knowledgeBaseIds
+    - name
+    type: object
   request.CreateKnowledgeReq:
     properties:
       description:
@@ -666,6 +681,11 @@ definitions:
       isExpired:
         description: minio存储文件是否过期 0:过期，1:不过期
         type: boolean
+    type: object
+  request.DeleteKeywordsReq:
+    properties:
+      id:
+        type: integer
     type: object
   request.DeleteKnowledge:
     properties:
@@ -814,6 +834,11 @@ definitions:
     - appId
     - appType
     type: object
+  request.GetKeywordsDetailReq:
+    properties:
+      id:
+        type: integer
+    type: object
   request.ImportOrUpdateModelRequest:
     properties:
       avatar:
@@ -884,6 +909,16 @@ definitions:
         type: string
       tagName:
         type: string
+    type: object
+  request.ListKeywordsReq:
+    properties:
+      name:
+        description: 用于搜索【问题中的关键词】/【文档中的词语】
+        type: string
+      pageNo:
+        type: integer
+      pageSize:
+        type: integer
     type: object
   request.Login:
     properties:
@@ -1193,6 +1228,24 @@ definitions:
     required:
     - contentStatus
     - docId
+    type: object
+  request.UpdateKeywordsReq:
+    properties:
+      alias:
+        type: string
+      id:
+        type: integer
+      knowledgeBaseIds:
+        items:
+          type: string
+        type: array
+      name:
+        type: string
+    required:
+    - alias
+    - id
+    - knowledgeBaseIds
+    - name
     type: object
   request.UpdateKnowledgeReq:
     properties:
@@ -1772,11 +1825,43 @@ definitions:
         description: 应用更新时间(用于历史记录排序)
         type: string
     type: object
+  response.GetKnowledgeKeywordListResp:
+    properties:
+      list:
+        items:
+          $ref: '#/definitions/response.KeywordsInfo'
+        type: array
+      pageNo:
+        type: integer
+      pageSize:
+        type: integer
+      total:
+        type: integer
+    type: object
   response.IDName:
     properties:
       id:
         type: string
       name:
+        type: string
+    type: object
+  response.KeywordsInfo:
+    properties:
+      alias:
+        type: string
+      id:
+        type: integer
+      knowledgeBaseIds:
+        items:
+          type: string
+        type: array
+      knowledgeBaseNames:
+        items:
+          type: string
+        type: array
+      name:
+        type: string
+      updatedAt:
         type: string
     type: object
   response.KnowledgeHitResp:
@@ -2539,24 +2624,50 @@ definitions:
     type: object
 info:
   contact: {}
-  description: "## HTTP Header\r\n| Header        | 说明      |\r\n| ------------- |
-    --------- |\r\n| Authorization | JWT token |\r\n| X-Language    | 语言Code  |\r\n|
-    X-Org-Id      | 组织ID    |\r\n\r\n## HTTP Status\r\n| HTTP Status             |
-    说明                   |\r\n| ----------------------- | ---------------------- |\r\n|
-    200, StatusOK           | 请求返回成功           |\r\n| 400, StatusBadRequest   | 请求返回失败，用于业务
-    |\r\n| 401, StatusUnauthorized | JWT认证失败            |\r\n| 403, StatusForbidden
-    \   | 没有权限               |\r\n\r\n## 权限-菜单对应表\r\n| 一级权限        | 二级权限  | 三级权限
-    | 一级菜单 | 二级菜单 | 三级菜单 |\r\n|-------------|-------|------|------|------|------|\r\n|
-    guest       |       |      | 【访客】 |      |      |\r\n| common      |       |      |
-    【通用】 |      |      |\r\n| permission  |       |      | 权限管理 |      |      |\r\n|
-    permission  | user  |      | 权限管理 | 用户管理 |      |\r\n| permission  | org   |      |
-    权限管理 | 组织管理 |      |\r\n| permission  | role  |      | 权限管理 | 角色管理 |      |\r\n\r\n##
-    `/v1/user/permission`返回用例\r\n```json\r\n{\r\n  \"code\": 0,\r\n  \"data\": {\r\n
-    \   \"orgPermission\": {\r\n      \"org\": {\"id\": \"test-org-id\", \"name\":
-    \"test-org-name\"},\r\n      \"permissions\": [\r\n        {\"perm\": \"permission\"},\r\n
-    \       {\"perm\": \"permission.user\"},\r\n        {\"perm\": \"permission.org\"},\r\n
-    \       {\"perm\": \"permission.role\"}\r\n      ]\r\n    }\r\n  },\r\n  \"msg\":
-    \"操作成功\"\r\n}\r\n```"
+  description: |-
+    ## HTTP Header
+    | Header        | 说明      |
+    | ------------- | --------- |
+    | Authorization | JWT token |
+    | X-Language    | 语言Code  |
+    | X-Org-Id      | 组织ID    |
+
+    ## HTTP Status
+    | HTTP Status             | 说明                   |
+    | ----------------------- | ---------------------- |
+    | 200, StatusOK           | 请求返回成功           |
+    | 400, StatusBadRequest   | 请求返回失败，用于业务 |
+    | 401, StatusUnauthorized | JWT认证失败            |
+    | 403, StatusForbidden    | 没有权限               |
+
+    ## 权限-菜单对应表
+    | 一级权限        | 二级权限  | 三级权限 | 一级菜单 | 二级菜单 | 三级菜单 |
+    |-------------|-------|------|------|------|------|
+    | guest       |       |      | 【访客】 |      |      |
+    | common      |       |      | 【通用】 |      |      |
+    | permission  |       |      | 权限管理 |      |      |
+    | permission  | user  |      | 权限管理 | 用户管理 |      |
+    | permission  | org   |      | 权限管理 | 组织管理 |      |
+    | permission  | role  |      | 权限管理 | 角色管理 |      |
+
+    ## `/v1/user/permission`返回用例
+    ```json
+    {
+      "code": 0,
+      "data": {
+        "orgPermission": {
+          "org": {"id": "test-org-id", "name": "test-org-name"},
+          "permissions": [
+            {"perm": "permission"},
+            {"perm": "permission.user"},
+            {"perm": "permission.org"},
+            {"perm": "permission.role"}
+          ]
+        }
+      },
+      "msg": "操作成功"
+    }
+    ```
   title: AI Agent Productivity Platform API
   version: v0.0.1
 paths:
@@ -4151,6 +4262,123 @@ paths:
       summary: 知识库命中测试
       tags:
       - knowledge
+  /knowledge/keywords:
+    delete:
+      consumes:
+      - application/json
+      description: 删除知识库关键词
+      parameters:
+      - description: 删除知识库关键词请求参数
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/request.DeleteKeywordsReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.Response'
+      security:
+      - JWT: []
+      summary: 删除知识库关键词
+      tags:
+      - knowledge.keywords
+    get:
+      consumes:
+      - application/json
+      description: 查询知识库关键词列表
+      parameters:
+      - description: 关键词列表查询请求参数
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/request.ListKeywordsReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.GetKnowledgeKeywordListResp'
+      security:
+      - JWT: []
+      summary: 查询知识库关键词列表
+      tags:
+      - knowledge.keywords
+    post:
+      consumes:
+      - application/json
+      description: 新增知识库关键词
+      parameters:
+      - description: 创建关键词请求参数
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/request.CreateKeywordsReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.Response'
+      security:
+      - JWT: []
+      summary: 新增知识库关键词
+      tags:
+      - knowledge.keywords
+    put:
+      consumes:
+      - application/json
+      description: 编辑知识库关键词
+      parameters:
+      - description: 修改关键词请求参数
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/request.UpdateKeywordsReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.Response'
+      security:
+      - JWT: []
+      summary: 编辑知识库关键词
+      tags:
+      - knowledge.keywords
+  /knowledge/keywords/detail:
+    get:
+      consumes:
+      - application/json
+      description: 查询知识库关键词详情
+      parameters:
+      - description: 关键词列表查询请求参数
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/request.GetKeywordsDetailReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.KeywordsInfo'
+      security:
+      - JWT: []
+      summary: 查询知识库关键词详情
+      tags:
+      - knowledge.keywords
   /knowledge/select:
     post:
       consumes:
