# internal/bff-service/server/http/handler/router/v1/knowledge.go
@@ -34,4 +34,11 @@ func registerKnowledge(apiV1 *gin.RouterGroup) {
 	// 绑定知识库标签
 	mid.Sub("knowledge.tag").Reg(apiV1, "/knowledge/tag/bind/count", http.MethodGet, v1.SelectTagBindCount, "查询标签绑定的知识库数量")
 	mid.Sub("knowledge.tag").Reg(apiV1, "/knowledge/tag/bind", http.MethodPost, v1.BindKnowledgeTag, "绑定知识库标签")
+
+	// 知识库关键词管理
+	mid.Sub("knowledge.keywords").Reg(apiV1, "/knowledge/keywords", http.MethodGet, v1.GetKnowledgeKeywordsList, "查询知识库关键词列表")
+	mid.Sub("knowledge.keywords").Reg(apiV1, "/knowledge/keywords", http.MethodPost, v1.CreateKnowledgeKeywords, "新增知识库关键词")
+	mid.Sub("knowledge.keywords").Reg(apiV1, "/knowledge/keywords/detail", http.MethodGet, v1.GetKnowledgeKeywordsDetail, "查询知识库关键词详情")
+	mid.Sub("knowledge.keywords").Reg(apiV1, "/knowledge/keywords", http.MethodPut, v1.UpdateKnowledgeKeywords, "编辑知识库关键词")
+	mid.Sub("knowledge.keywords").Reg(apiV1, "/knowledge/keywords", http.MethodDelete, v1.DeleteDocCategoryKeywords, "删除知识库关键词")
 }
